--- a/application/modules/serviciosEscolares/views/scripts/index/index.phtml
+++ b/application/modules/serviciosEscolares/views/scripts/index/index.phtml
@@ -1,9 +1,9 @@
 <?php
-$this->title = 'Bienvenido';
+$this->title = 'Bienvenido al módulo de Servicios Escolares';
 $this->headTitle($this->title);
 
 //echo $acl->isAllowed('alumno','serviciosEscolares') ? "Permitido": "Denegado";
-
+echo '<h1>' . $this->title . '</h1><br>';
 ?>
 
 Bienvenidos al modulo de Servicios Escolares
