Corrección de errores en los layouts
Se corrigieron errores en las etiquetas que no permitían mostrar el contenido adecuadamente

--- a/application/layouts/scripts/default.phtml
+++ b/application/layouts/scripts/default.phtml
@@ -12,7 +12,7 @@ $this->placeholder('semestre')->set("Octavo");
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/reset.css"); ?>
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/text.css"); ?>
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/960.css"); ?>
-        <?= $this->headLink()->prependStylesheet($this->baseUrl() . "/css/scitec_default.css"); ?>
+        <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/scitec_default.css"); ?>
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/menu.css"); ?>
 
         <script lenguage="javascript" src="<?php echo $this->baseUrl() . "/js/jquery.js" ?>"></script>
