--- a/application/layouts/scripts/alumnos.phtml
+++ b/application/layouts/scripts/alumnos.phtml
@@ -12,7 +12,7 @@
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/reset.css"); ?>
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/text.css"); ?>
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/960.css"); ?>
-        <?= $this->headLink()->prependStylesheet($this->baseUrl() . "/css/scitec_alumnos.css" ); ?>
+        <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/scitec_alumnos.css" ); ?>
 		<?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/menu.css" ); ?>
 		
 		<script lenguage="javascript" src="<?php echo $this->baseUrl() . "/js/jquery.js" ?>"></script>
