--- a/application/layouts/scripts/index.phtml
+++ b/application/layouts/scripts/index.phtml
@@ -12,7 +12,7 @@ echo $this->doctype();
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/reset.css"); ?>
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/text.css"); ?>
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/960.css"); ?>
-        <?= $this->headLink()->prependStylesheet($this->baseUrl() . "/css/scitec_index.css"); ?>
+        <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/scitec_index.css"); ?>
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl() . "/css/menu.css"); ?>
 
         <script lenguage="javascript" src="<?php echo $this->baseUrl() . "/js/jquery.js" ?>"></script>
