--- a/application/layouts/scripts/index.phtml
+++ b/application/layouts/scripts/index.phtml
@@ -80,6 +80,7 @@ echo $this->doctype();
                             <b>Nombre: </b> <?= $this->placeholder('nombre'); ?><br></br>
                             <b>Carrera: </b> <?= $this->placeholder('carrera'); ?><br></br>
                             <b>Semestre: </b> <?= $this->placeholder('semestre'); ?>
+							<b>Semestre2: </b> <?= $this->placeholder('semestre'); ?>
                         </div>
                     </div>
 
