--- a/application/layouts/scripts/index.phtml
+++ b/application/layouts/scripts/index.phtml
@@ -77,10 +77,9 @@ echo $this->doctype();
                             echo $this->placeholder('tipo');
                             ?>
                             <br></br>
-                            <b>Nombre: </b> <?= $this->placeholder('nombre'); ?><br></br>
-                            <b>Carrera: </b> <?= $this->placeholder('carrera'); ?><br></br>
-                            <b>Semestre: </b> <?= $this->placeholder('semestre'); ?>
-							<b>Semestre2: </b> <?= $this->placeholder('semestre'); ?>
+                            <b>Nombre: </b> <?php echo $this->placeholder('nombre'); ?><br></br>
+                            <b>Carrera: </b> <?php echo $this->placeholder('carrera'); ?><br></br>
+                            <b>Semestre: </b> <?php echo $this->placeholder('semestre'); ?>
                         </div>
                     </div>
 
